<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundGrey"
    tools:context="com.example.vaney.smartsuit.UserManual">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/app_bar"
            layout = "@layout/app_bar">
        </include>

        <TextView
            android:id="@+id/HeadTextCalibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            android:text="@string/_1_calibrate_button"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextCalibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HeadTextCalibrate"
            android:layout_marginLeft="10dp"
            android:text="@string/Textcalibrate"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/SubTextStep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextCalibration"
            android:layout_marginLeft="20dp"
            android:text="@string/calibration_process_step_1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextStep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="30dp"
            android:layout_below="@+id/SubTextStep1"
            android:text="@string/Textcalibrate1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/SubTextStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextStep1"
            android:layout_marginLeft="20dp"
            android:text="@string/calibration_process_step_2"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="30dp"

            android:layout_below="@+id/SubTextStep2"
            android:text="@string/Textcalibrate2"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/HeadTextstart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextStep2"
            android:text="@string/_2_start_button"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HeadTextstart"
            android:layout_marginLeft="10dp"
            android:text="@string/Textstart"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/HeadTextExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextStart"
            android:text="@string/_3_exit_button"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/TextStart"
            android:layout_below="@+id/HeadTextExit"
            android:text="@string/Textexit"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/HeadTextRealTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextExit"
            android:text="@string/_4_real_time_data_activity"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextRealTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HeadTextRealTime"
            android:layout_marginLeft="10dp"
            android:text="@string/TextRealTime"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextRealTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/TextRealTime"
            android:layout_marginLeft="20dp"
            android:text="@string/SubTextRealTime"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_below="@+id/TextRealTime2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/oval"
            android:onClick="BackToMainMenu"
            android:text="@string/back"
            android:textAlignment="center" />

    </RelativeLayout>

</ScrollView>
