<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundGrey"
    tools:context="com.example.vaney.smartsuit.CalibrateStep2">

    <include
        android:id="@+id/app_bar"
        layout = "@layout/app_bar">
    </include>

    <Button
        android:id="@+id/StartStep2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Step2Info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/oval"
        android:onClick="StartStep2"
        android:text="@string/start"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="137dp" />

    <Button
        android:id="@+id/Step2Info"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle"
        android:onClick="InfoStep2"
        android:text="?"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/countdown"
        android:paddingLeft="5dp"
        android:text="@string/_07_sec"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="italic" />


    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:src="@drawable/calibrate2gif"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/countdown"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="italic" />

</RelativeLayout>
